# Parallel_Perceptron

./: .gitignore  README.md
MLP/: CMakeLists.txt  constants.h  functionality.cpp  functionality.h  main.cpp  matplotlibcpp.h  perceptron.cpp  perceptron.h
MLP/dataloader/: dataloader.cpp  dataloader.h
MLP/errors/: errors.h
MLP/gstring/: GString.cpp  GString.h
MLP/layers/: crossentropy.cpp  crossentropy.h  layer.h  linear.cpp  linear.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
MLP/matrix/: Matrix.h  matrix.cpp
MLP/multiplicators/: MatrixMultiplicator.h  slowmultiplicator.cpp  slowmultiplicator.h
MLP/row/: Row.cpp  Row.h
